- Began making progress on mobile compatability media selectors.   ~ Currently up to date on home section only – navbar has some bugs with being able to select icons. Unsure of cause.

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ a {
 
 #nav-buttons {
     font-family: ksans;
-    font-size: 1 rem;
+    font-size: min(1vw, 3vh);
     flex: 1;
     display: flex;
     align-items: center;
@@ -143,12 +143,14 @@ a {
 
 .intro_name {
     font-family: ksansb;
-    font-size: 3.5rem;
+    font-size: min(4vw, 8vh);
     margin-right: auto;
+    /* border: 1px solid black; */
 }
 
 .intro_title {
-    font-size: 0.85rem;
+    /* border: 1px solid black; */
+    font-size: min(1vw, 4vh);
     margin: 1% auto 4% 0;
     white-space: pre;
 }
@@ -157,21 +159,35 @@ a {
     color: #54BA8F;
 }
 
+#introtext {
+    /* border:1px solid green; */
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#res-but-anc {
+    flex: 1;
+    /* border: 1px solid red; */
+}
+
 .resume_button {
     margin-top: 3%;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    padding: 1% 0 1% 0;
+    gap: 8%;
+    padding: 8% 0 8% 0;
     color: white;
-    font-size: 24px;
+    font-size: min(1.8vw, 3.8vh);
     font-family: ksans;
     border-radius: 15px;
     flex-direction: row;
     background-color: #54C796;
-    width: 243px;
-    height: 65px;
+    width: min(16vw, 35vh);
+    height: auto;
     white-space: nowrap;
     border: none;
     transition: background-color 0.5s ease;
@@ -213,8 +229,8 @@ a {
     position: absolute;
     border-radius: 50%;
     overflow: hidden;
-    width: 69vh;
-    height: 69vh;
+    width: min(30vw, 69vh);
+    height: min(30vw, 69vh);
     z-index: 2;
 }
 
@@ -234,8 +250,8 @@ a {
     /* Prevent shrinking */
     flex-grow: 0;
     /* Prevent growing */
-    width: 55vh;
-    height: 55vh;
+    width: min(25vw, 55vh);
+    height: min(25vw, 55vh);
     border: 5px solid black;
     box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.3);
     border-radius: 50%;
@@ -246,10 +262,11 @@ a {
 }
 
 .bounce_arrow img {
+    /* border: 1px solid red; */
     position: absolute;
     bottom: 3%;
     /* Distance from the bottom */
-    left: 50%;
+    left: calc(50% - 3vw);
     width: max(3vw, 5vh);
     height: auto;
     opacity: 0;
@@ -257,6 +274,74 @@ a {
     animation: bounce 1.5s ease-in-out infinite 1s, fadeIn 1s ease-in-out 1.5s forwards;
     /* Animation definition */
 }
+
+/* 
+--------------------------------------------------------------------------------
+
+
+WELCOME / HOME MOBILE RULES
+
+
+--------------------------------------------------------------------------------
+*/
+
+@media (max-width: 768px) {
+
+    #welcome_wrapper {
+        flex-direction: column;
+        gap: 6vh;
+    }
+
+    .intro {
+        order: 2;
+        gap: 2vh;
+    }
+
+    .intro_name, .intro_title {
+        text-align: center;
+        margin: 0;
+    }
+
+    .intro_name {
+        font-size: min(8vw, 8vh);
+    }
+
+    .intro_title {
+        margin-top: 0.5vh;
+        font-size: min(2.3vw, 4vh);
+    }
+
+    .portrait img {
+        width: min(50vw, 100vh);
+        height: min(50vw, 100vh);
+        box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.3);
+    }
+
+    .resume_button {
+        width: min(30vw, 50vh);
+        height: auto;
+        font-size: min(3vw, 5vh);
+    }
+
+    #nav-buttons {
+        display: none;
+    }
+
+    #nav-contact-icons {
+        justify-content: center;
+        margin-right: 0;
+    }
+}
+
+/* 
+--------------------------------------------------------------------------------
+
+
+BEGIN ABOUT SECTION
+
+
+--------------------------------------------------------------------------------
+*/
 
 
 .about {
